--- a/index.html
+++ b/index.html
@@ -14,7 +14,31 @@
 <body>
     <video autoplay muted loop id="myVideo">
         <source src="background/firewatch-tower-desktop-wallpaperwaifu-com.mp4" type="video/mp4">
-      </video>
+      </video>\
+
+      <nav>
+        <div class="nav-title">
+          <img src="background/social-media.gif" alt="">
+        </div>
+        <div class="nav-bar">
+          <div class="nav-link">
+            <a href="">Home</a>
+          </div>
+          <div class="nav-link">
+            <a href="">Login</a>
+          </div>
+          <div class="nav-link">
+            <a href="">SignUp</a>
+          </div>
+          <div class="nav-link">
+            <a href="">Contact</a>
+          </div>
+        </div>
+
+        <div class="nav-menu">
+          <i class="ri-menu-line"></i>
+        </div>
+      </nav>
     <div class="container">
         <form action="">
             <h1>Login</h1>
