--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <source src="background/firewatch-tower-desktop-wallpaperwaifu-com.mp4" type="video/mp4">
       </video>\
 
-      <nav>
+      <!-- <nav>
         <div class="nav-title">
           <img src="background/social-media.gif" alt="">
         </div>
@@ -38,7 +38,7 @@
         <div class="nav-menu">
           <i class="ri-menu-line"></i>
         </div>
-      </nav>
+      </nav> -->
     <div class="container">
         <form action="">
             <h1>Login</h1>
